# ISP

./: .gitignore  CMakeLists.txt
FinanceData/: BoostRootPath.cmake  CMakeLists.txt  alphavintageapi.cpp  alphavintageapi.h  historicaldatapresenter.cpp  historicaldatapresenter.h  ihistiricaldata.h  urlRequests.cpp  urlRequests.h
Graphics/: CMakeLists.txt
Graphics/QT_Graphs/: CMakeLists.txt
TableRead/: CMakeLists.txt  IUserTransactionUpdater.h
Tests/: CMakeLists.txt  DateTimeTest.cpp  GoogleTestPath.cmake  LogTest.cpp  main_test.cpp  urlRequestsTest.cpp
Utils/: CMakeLists.txt  DataTypes.h  JsonParser.cpp  JsonParser.h  Log.cpp  Log.h  Parser.cpp  Parser.h  datetime.cpp  datetime.h
docs/: MainUML.drawio  Untitled Diagram.drawio  json_example  ~$MainUML.drawio.dtmp
